--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -46,3 +46,9 @@ services:
     volumes:
       - ./docker/db/data:/var/lib/mysql
       - ./docker/db/my.cnf:/etc/mysql/conf.d/my.cnf
+
+  mailhog:
+    image: 'mailhog/mailhog:latest'
+    ports:
+        - 1025:1025
+        - 8025:8025
