QRLの表示確認

--- a/docker/app/Dockerfile
+++ b/docker/app/Dockerfile
@@ -4,7 +4,12 @@ COPY php.ini /usr/local/etc/php/
 
 RUN apt update \
     && apt install -y default-mysql-client zlib1g-dev libzip-dev unzip \
-    && docker-php-ext-install pdo_mysql zip
+    && docker-php-ext-install pdo_mysql zip &&\
+
+    # JPEG 対応
+    apt-get install -y zlib1g-dev libpng-dev libjpeg62-turbo-dev &&\
+    docker-php-ext-configure gd --with-jpeg &&\
+    docker-php-ext-install -j$(nproc) gd
 
 RUN curl -sS https://getcomposer.org/installer | php \
     && mv composer.phar /usr/local/bin/composer \
